Replace footer logos with font-awesome

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Alex Piechowski</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
@@ -99,14 +100,13 @@
             <div class="footer-secondary-links">
                 <ul class="footer-social">
                     <li>
-                        <a href="https://github.com/pachonk" target="_blank">
-                            <img src="img/github-logo-circle.png" alt="LinkedIn">
-                        </a>
+                        <a href="https://github.com/pachonk" target="_blank" class="fa-lg fa-github-square" aria-hidden="true"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/alex-piechowski" target="_blank">
-                            <img src="img/linkedin-logo-circle.png" alt="LinkedIn">
-                        </a>
+                        <a href="https://www.linkedin.com/in/alex-piechowski" target="_blank" class="fa-lg fa-linkedin-square" aria-hidden="true"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/alex-piechowski" target="_blank" class="fa-lg fa-stack-overflow" aria-hidden="true"></a>
                     </li>
                 </ul>
             </div>
